1. Метод .of [#405724]